added my personal links

--- a/index.html
+++ b/index.html
@@ -672,10 +672,10 @@
         <div class="card">
           <p class="name">Vera</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">tschanzvera</a>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/vera-tschanz-500258a2/" target="_blank">tschanzvera</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">tschanzvera</a>
+            <a href="https://github.com/tschanzvera" target="_blank">tschanzvera</a>
           </p>
           <p class="about">Student</p>
           <div class="resources">
