--- a/index.html
+++ b/index.html
@@ -123,6 +123,35 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Stephen Adeniji</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://twitter.com/steve_ade1407" target="_blank">steve_ade1407</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Praizee" target="_blank">Praizee</a>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/stephen-adeniji/" target="_blank">Stephen</a>
+          </p>
+          <p class="about">A Front-end Developer dedicated to creating immersive and user-friendly web experiences.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools ">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="roadmap.sh">roadmap.sh</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Tim</p>
           <p class="contact">
             <i class="fab fa-github"></i>
