--- a/index.html
+++ b/index.html
@@ -727,6 +727,28 @@
         <!-- ========= Card 13 END =========  -->
         <!-- ========= END ========= -->
 
+        <div class="card">
+          <p class="name">Tyler Ren</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/rentianle2023" target="_blank">TylerRen</a>
+          </p>
+          <p class="about">I'm a self-taught backend software engineer current working at Citibank Shanghai</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="https://stackoverflow.com/" title="Stack Overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="#" target="https://leetcode.com/" title="Leetcode">Leetcode</a>
+              </li>
+              <li>
+                <a href="#" target="https://www.freecodecamp.org/" title="freeCodeCamp">freeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
