--- a/index.html
+++ b/index.html
@@ -152,6 +152,32 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Modupe Marvellous</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/kayveengee" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Marvie-03" target="_blank">Your handle</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://dev.to" target="_blank" title="First Resource">Dev.to</a>
+              </li>
+              <li>
+                <a href="https://free-for.dev" target="_blank" title="Second Resource">Free For Dev</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="Third resource">StackOverflow </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Tim</p>
           <p class="contact">
             <i class="fab fa-github"></i>
