--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________  Marvellous Card START ________  -->
         <div class="card">
           <p class="name">Modupe Marvellous</p>
           <p class="contact">
@@ -175,7 +175,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________  Marvellous card END ________  -->
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Tim</p>
