Add first contribution

--- a/index.html
+++ b/index.html
@@ -751,6 +751,32 @@
           </div>
         </div>
         <!-- ========= Card 13 END =========  -->
+
+         <!-- ========= Card 14 START =========  -->
+        <div class="card">
+          <p class="name">Belam</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/bmuia" target="_blank">belam</a>
+          </p>
+          <p class="about">I’m a mysterious individual who has yet to fill out my bio. One thing’s for certain: I love writing code!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://newsletter.techworld-with-milan.com/p/how-to-become-a-great-software-engineer" target="_blank" title="First Resource">Techworld</a>
+              </li>
+              <li>
+                <a href="https://academysmart.com/software-developer-burnout-symptoms-causes-prevention-and-recovery/" target="_blank" title="Second Resource">Software developer burnout.</a>
+              </li>
+              <li>
+                <a href="https://chriscoyier.net/" target="_blank" title="Third resource">CSS tricks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+         <!-- ========= Card 14 END =========  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
