--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">Twitter</a>
+                <a href="https://www.twitter.com/" target="_blank" title="First Resource">Twitter</a>
               </li>
               <li>
-                <a href="https://leetcode.com" target="_blank" title="Second Resource">FreeCodeCamp</a>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">FreeCodeCamp</a>
               </li>
               <li>
                 <a href="https://github.com/explore" target="_blank" title="Third resource">Github explore</a>
