Added Anthony's card

--- a/index.html
+++ b/index.html
@@ -123,6 +123,31 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Anthony Do</p>
+          <p class="contact">
+            <i class="fa-brands fa-github"></i>
+            <a href="https://github.com/anthonydo8196" target="_blank">anthonydo8196</a>
+          </p>
+          <p class="about">I am trying to become a better programmer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="First Resource">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="Second Resource">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Third resource">Udemy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Tim</p>
           <p class="contact">
             <i class="fab fa-github"></i>
