--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <div class="card">
+			<p class="name">Luca Giannotti</p>
+			<p class="contact">
+			  <i class="fab fa-instagram"></i>
+			  <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+			  <i class="fab fa-github"></i>
+			  <a href="https://www.github.com/Squidnugget77" target="_blank">Squidnugget77</a>
+			</p>
+			<p class="about">Studying computer science at a university. 
+				Ducks are my favorite animal.
+			</p>
+			<div class="resources">
+			  <p>3 Useful Dev Resources</p>
+			  <ul>
+				<li>
+				  <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank" title="First Resource">FreeCodeCamp Responsive Web Design</a>
+				</li>
+				<li>
+				  <a href="https://fontawesome.com/icons/instagram?f=brands&s=solid" target="_blank" title="Second Resource">FontAwesome for icons</a>
+				</li>
+				<li>
+				  <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures-v8/" target="_blank" title="Third resource">FreeCodeCamp JavaScript</a>
+				</li>
+			  </ul>
+			</div>
+		  </div>
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Stephen Adeniji</p>
