--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________  Tadiwanashe Rodney Zvidza Card START ________  -->
+        <div class="card">
+          <p class="name">Tadiwanashe Rodney Zvidza</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/mysterious_son" target="_blank">highlyFavoredDude🙏🏿</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/TadiwanasheZvidzaRodney" target="_blank">TadiwanasheZvidzaRodney</a>
+          </p>
+          <p class="about">I'm an Entrepreneur, Software Developer and Open Source Contributer... Curious, i love to read and be able to expand my mind, knowledge and increase my capabilities to survive and thrive in dynamic World we living in.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/freeCodeCamp/how-to-contribute-to-open-source?tab=readme-ov-file" target="_blank" title="First Resource">FreeCodeCamp How To Contribute To Open Source</a>
+              </li>
+              <li>
+                <a href="https://goodfirstissues.com/" target="_blank" title="Second Resource">Good First Issues</a>
+              </li>
+              <li>
+                <a href="https://github.com/manjunath5496/Books/blob/master/README.md" target="_blank" title="Third resource">Wisdom!</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________  Marvellous card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Stephen Adeniji</p>
