--- a/index.html
+++ b/index.html
@@ -121,6 +121,31 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Peculia</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/peculiap1" target="_blank">peculiap1</a>
+          </p>
+          <p class="about">Hi! I'm a Student developer, and aspiring Frontend Web Developer. New to open-source. Feel free to contact me!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://openai.com/chatgpt/" target="_blank" title="Third resource">ChatGPT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________  Tadiwanashe Rodney Zvidza Card START ________  -->
         <div class="card">
           <p class="name">Tadiwanashe Rodney Zvidza</p>
