--- a/index.html
+++ b/index.html
@@ -87,30 +87,6 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-        <div class="card">
-          <p class="name">Your name</p>
-          <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
-            <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
-          </p>
-          <p class="about">about you</p>
-          <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
-              </li>
-              <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
-              </li>
-              <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
-              </li>
-            </ul>
-          </div>
-        </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
@@ -123,25 +99,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Nicholas Bruner</p>
+          <p class="name">yule153604</p>
           <p class="contact">
-            <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/nicholas-bruner-b8523a190/" target="_blank">Nicholas</a>
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/" target="_blank"></a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/Nichz123/" target="_blank">Nichz123</a>
+            <a href="https://www.github.com/yule153604" target="_blank">yule153604</a>
           </p>
-          <p class="about">Studying a BS in Computer Science. Excited to enter the tech industy!!!</p>
+          <p class="about">没有尽力局，只是没能做到完美</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a>
+                <a href="#" target="_blank" title="all in ">ALL IN</a>
               </li>
               <li>
-                <a href="https://leetcode.com/" target="_blank" title="LeetCode">LeetCode</a>
+                <a href="#" target="_blank" title="all in ">ALL  IN </a>
               </li>
               <li>
-                <a href="https://www.hackerrank.com" target="_blank" title="Hackerrank">Hackerrank</a>
+                <a href="#" target="_blank" title="ALL IN">ALL IN</INp></a>
               </li>
             </ul>
           </div>
