--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
           <p class="contact">
             <a href="https://www.github.com/elmarryusifli" target="_blank">
               <i class="fab fa-github"></i>
-              Billy Mathis
+              Elmar Yusifli
             </a>
           </p>
           <p class="about">Enthusiastic enterprenuer</p>
