--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,33 @@
         </div>
         <!-- ========= Card 15 END =========  -->
 
+        <!-- ========= Card 16 START =========  -->
+        <div class="card">
+          <p class="name">Bhavishya Garg</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/bhavishya2601" target="_blank">bhavishya2601</a>
+          </p>
+          <p class="about">
+            I am Computer Science Student from India, Excited to Explore and Contribute to the Open source community
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="ChatGPT">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= Card 16 END =========  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
