--- a/index.html
+++ b/index.html
@@ -121,6 +121,36 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+
+        <!-- ________ Atharva Domale Card Start ________  -->
+        <div class="card">
+          <p class="name">Atharva Domale</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/atharvadomale/" target="_blank">atharvadomale</a>
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/atharva_domale" target="_blank">atharva_domale</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/AtharvaDomale" target="_blank">AtharvaDomale</a>
+          </p>
+          <p class="about">AI-focused 3rd-year Student | Strong foundation in ML Algorithms, Deep Learning, ANN, Java, DSA, Linux</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://10web.io/" target="_blank" title="First Resource">Create a website in seconds</a>
+              </li>
+              <li>
+                <a href="https://css-tricks.com/" target="_blank" title="Second Resource">CSS Tips & Tricks</a>
+              </li>
+              <li>
+                <a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank" title="Third resource">Roadmap</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Atharva Domale Card End ________  -->
+
         <!-- ________ Peculia card START ________  -->
         <div class="card">
           <p class="name">Peculia</p>
