--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
                 <a href="https://web3.foundation/" target="_blank" title="Web3">Web3</a>
               </li>
               <li>
-                <a href="https://web3.foundation/" target="_blank" title="Three.js">Three.js</a>
+                <a href="https://web3.foundation/" target="_blank" title="Three.js">3Three.js</a>
               </li>
             </ul>
           </div>
