--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Mukul Waval Card START ________  -->
+        <div class="card">
+          <p class="name">Mukul Waval</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/waval77815" target="_blank">waval77815</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/MukulWaval" target="_blank">MukulWaval</a>
+          </p>
+          <p class="about">Hi! I'm a Student developer, and aspiring Game Developer. New to open-source. Feel free to contact me!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freecodecamp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">w3schools</a>
+              </li>
+              <li>
+                <a href="https://openai.com/chatgpt/" target="_blank" title="Third resource">chatgpt</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Mukul Waval Card END ________  -->
+
         <!-- ________ Atharva Domale Card Start ________  -->
         <div class="card">
           <p class="name">Atharva Domale</p>
