--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,34 @@
         </div>
         <!-- ========= Card 17 END =========  -->
 
-        <!-- ========= END ========= -->
+      <!-- ________ Love Okum Contributor card START ________  -->
+      <div class="card">
+        <p class="name">Love Okum</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://www.twitter.com/hoyindouyeh" target="_blank">@hoyindouyeh</a>
+          <i class="fab fa-github"></i>
+          <a href="https://www.github.com/loveokum" target="_blank">loveokum</a>
+        </p>
+        <p class="about">I am fun to be around, I am very caring, I am passionate about the impact my skills can have in the real world, and lastly I am committed to constantly improving myself by learning new technologies and frameworks.</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://github.com/remoteintech/remote-jobs?tab=readme-ov-file" target="_blank" title="Remote Jobs opportunities repo on github">remoteintech</a>
+            </li>
+            <li>
+              <a href="https://devdocs.io/" target="_blank" title="DevDocs combines multiple API documentations in a fast, organized, and searchable interface.">devdocs</a>
+            </li>
+            <li>
+              <a href="https://www.doola.com/blog/side-hustles-for-programmers/" target="_blank" title="get the best side hustles for Programmers">doola</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+      <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
