Hau's Card Signed-off-by: Hau Trong Phan <hauphanlvc@gmail.com>

--- a/index.html
+++ b/index.html
@@ -121,6 +121,25 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Hau Trong Phan________  -->
+        <div class="card">
+          <p class="name">Hau Trong Phan</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/hauphanlvc" target="_blank">hauphanlvc</a>
+          </p>
+          <p class="about">
+            Hi, I'm just a person who want to know how to contribute a project, and become a professional full stack developer. 
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://free-for.dev/#/" target="_blank" title="First Resource">Get all free services </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ________ Mukul Waval Card START ________  -->
         <div class="card">
           <p class="name">Mukul Waval</p>
