--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.w3schools.com/https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
               </li>
               <li>
                 <a href="https://chat.openai.com/" target="_blank" title="Second Resource">ChatGPT</a>
