--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Donald Duck card START ________  -->
+        <div class="card">
+          <p class="name">Donald Duck</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">dduck</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">dduck</a>
+          </p>
+          <p class="about">Hi! I'm a Student developer, and Machine Learning enthusiast. New to open-source. Feel free to contact me!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://chat.openai.com/" target="_blank" title="Second Resource">ChatGPT</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Third resource">Stack Overflow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Donald Duck card END ________  -->
+
         <!-- ________ Harshabardhana Parida Contributor card START ________  -->
         <div class="card">
           <p class="name">Harshabardhana Parida</p>
