Add 2 more resoucres
Signed-off-by: Hau Trong Phan <hauphanlvc@gmail.com>

--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
               <li>
                 <a href="https://free-for.dev/#/" target="_blank" title="First Resource">Get all free services </a>
               </li>
+              <li>
+                <a href="https://tech-blogs.dev/" target="_blank" title="Second Resoucrse"> This is a list of Awesome Teach Blogs </a>
+              </li>
+              <li>
+                <a href="https://a.ya.ru/" target="_blank" title="Third Resoucrse">AI of Russia</a>
+              </li>
             </ul>
           </div>
         </div>
