--- a/index.html
+++ b/index.html
@@ -126,40 +126,22 @@
           <p class="name">Daniel Kill</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/daniel-kill-57014630a/" target="_blank">Your handle</a>
+            <a href="https://www.linkedin.com/in/daniel-kill-57014630a/" target="_blank">Daniel Kill</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/Daniel-Kill" target="_blank">Your handle</a>
+            <a href="https://github.com/Daniel-Kill" target="_blank">Daniel Kill</a>
           </p>
           <p class="about">I'm a software developer and have dabbled in several programming languages since 1982.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a
-                  href="https://www.youtube.com/watch?v=qz0aGYrrlhU"
-                  target="_blank"
-                  title="HTML Tutorial for Beginners: HTML Crash Course"
-                >
-                  HTML Tutorial for Beginners
-                </a>
+                <a href="https://www.youtube.com/watch?v=qz0aGYrrlhU" target="_blank" title="HTML Tutorial for Beginners: HTML Crash Course">HTML Tutorial for Beginners</a>
               </li>
               <li>
-                <a
-                  href="https://www.youtube.com/watch?v=W6NZfCO5SIk"
-                  target="_blank"
-                  title="JavaScript Tutorial for Beginners: Learn JavaScript in 1 Hour"
-                >
-                  JavaScript Tutorial for Beginners
-                </a>
+                <a href="https://www.youtube.com/watch?v=W6NZfCO5SIk" target="_blank" title="JavaScript Tutorial for Beginners: Learn JavaScript in 1 Hour">JavaScript Tutorial for Beginners</a>
               </li>
               <li>
-                <a
-                  href="https://www.youtube.com/watch?v=7S_tz1z_5bA"
-                  target="_blank"
-                  title="MySQL Tutorial for Beginners [Full Course]"
-                >
-                  MySQL Tutorial for Beginners
-                </a>
+                <a href="https://www.youtube.com/watch?v=7S_tz1z_5bA" target="_blank" title="MySQL Tutorial for Beginners [Full Course]">MySQL Tutorial for Beginners</a>
               </li>
             </ul>
           </div>
