--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *sohamsoham1* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">sohamsoham1</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/SamaddarSo83016" target="_blank">soham</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sohamsoham1/sohamsoham1" target="_blank">sohamsoham1</a>
+          </p>
+          <p class="about">I am trying to learn web development</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="First Resource">leetcode</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">freecodecamp</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="Third resource">odin project</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *sohamsoham1* Contributor card END ________  -->
+
         <!-- ________ *Daniel Kill* Contributor card START ________  -->
         <div class="card">
           <p class="name">Daniel Kill</p>
