--- a/index.html
+++ b/index.html
@@ -121,6 +121,40 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Eddie Lin</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/cyun-kai-lin/" target="_blank">Cyun-Kai Lin</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/eddielin0926" target="_blank">eddielin0926</a>
+          </p>
+          <p class="about">
+            Hello, I am a software developer from Taiwan with a passion for reading
+            and exploring new technologies. I am currently seeking job opportunities.
+            If you're interested in hiring, please feel free to message me on
+            LinkedIn.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@TraversyMedia" target="_blank" title="Traversy Media">Traversy Media</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@Fireship" target="_blank" title="Fireship">Fireship</a>
+              </li>
+              <li>
+                <a href="https://www.cs.cmu.edu/afs/cs/academic/class/15213-f15/www/index.html" target="_blank" title="Intro to Computer Systems">
+                  Intro to Computer Systems
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *Daniel Kill* Contributor card START ________  -->
         <div class="card">
           <p class="name">Daniel Kill</p>
