--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+          <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+          <div class="card">
+            <p class="name">Jay Bee</p>
+            <p class="contact">
+              <i class="fab fa-x-twitter"></i>
+              <a href="https://twitter.com/I_IAMBATMAN_N" target="_blank">I_IAMBATMAN_N</a>
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/I-IAMBATMAN-N" target="_blank">I-IAMBATMAN-N</a>
+            </p>
+            <p class="about">Hello there, my name is Jay and I am a frontend developer from Czechia. I am 3 meters tall pink individual with realy good taste in music. <br> Love you all and have a nice day 🤙😊</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://daily.dev/" target="_blank" title="First Resource">daily.dev</a>
+                </li>
+                <li>
+                  <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stack Overflow</a>
+                </li>
+                <li>
+                  <a href="https://roadmap.sh/" target="_blank" title="Third resource">roadmap.shj</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Eddie Lin</p>
