--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Contribute-To-This-Project Begin Shon Tuesday, 28 May 2024 19:55:38 ________  -->
+        <div class="card">
+          <p class="name">Shon Harsh</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/shonharsh/" target="_blank">shonharsh</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ShonHarsh" target="_blank">ShonHarsh</a>
+          </p>
+          <p class="about">I am an automation developer in the United States.  I love coffee and spicy foods!</p>
+          <div class="resources">
+            <p>3 Useful Developer Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.uipath.com/rpa/academy" target="_blank" title="UiPath Academy">UiPath Academy - Learn Automation</a>
+              </li>
+              <li>
+                <a href="https://www.acetext.com/" target="_blank" title="Ace Text - A clipboard monitor and a great place to store your code toolbox!">Ace Text - Clipboard Monitor</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy - Wait for sale prices.">Udemy - Never Stop Learning</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Contribute-To-This-Project Begin End Shon ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Jorge Norena</p>
