--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *uepzuesContributor card START ________  -->
+        <div class="card">
+          <p class="name">Krimier Sanz</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/krimierdan" target="_blank">krimierdan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/uepzues" target="_blank">uepzues</a>
+          </p>
+          <p class="about">I'm an asipiring frontend developer. I love coffee and manga</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org" target="_blank" title="First Resource">Mozilla Developer Network</a>
+              </li>
+              <li>
+                <a href="https://freecodecamp.org" target="_blank" title="Second Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://free-for.dev" target="_blank" title="Third resource">Free for Developers</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ Contribute-To-This-Project Begin Shon Tuesday, 28 May 2024 19:55:38 ________  -->
         <div class="card">
           <p class="name">Shon Harsh</p>
