--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/ikteng" target="_blank">Ik Teng's Github</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">I am a passionate computer science student who wants to learn and share more things</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
