--- a/index.html
+++ b/index.html
@@ -1609,7 +1609,7 @@
                 <a href="https://www.youtube.com/@NetNinja" target="_blank" title="Second Resource">Net Ninja</a>
               </li>
               <li>
-                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">w3schools/a>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">w3schools</a>
               </li>
             </ul>
           </div>
