Add kaustubh5716 card info

--- a/index.html
+++ b/index.html
@@ -121,6 +121,38 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <div class="grid" id="contributions">
+          <!-- ================================================ -->
+          <!-- ==================  TEMPLATE  ================== -->
+          <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+  
+          <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+          <div class="card">
+            <p class="name">Kaustubh Desale</p>
+            <p class="contact">
+              <i class="fab fa-instagram"></i>
+              <a href="https://www.instagram.com/_kaustubhdesale_" target="_blank">Instagram Handle</a>
+              <i class="fab fa-github"></i>
+              <a href="https://www.github.com/kaustubh5716" target="_blank">Github Profile</a>
+            </p>
+            <p class="about">Curious mind, lifelong learner. Passionate about tech, books, and travel. Always up for a new adventure!</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://www.w3schools.com/html/" target="_blank" title="First Resource">HTML tutorial</a>
+                </li>
+                <li>
+                  <a href="https://www.w3schools.com/css/" target="_blank" title="Second Resource">CSS tutorial</a>
+                </li>
+                <li>
+                  <a href="https://www.w3schools.com/js/" target="_blank" title="Third resource">JavaScript Tutorial</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ Donald's card START ________  -->
         <div class="card">
           <p class="name">Donald Duck</p>
