--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Dmitry Porotnikov Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Dmitry Porotnikov</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/dmitryporotnikov" target="_blank">dmitryporotnikov</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/dmitryporotnikov" target="_blank">dmitryporotnikov</a>
+          </p>
+          <p class="about">Hi! I work with Microsoft Azure, and coding is just a hobby for me.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.boot.dev/" target="_blank" title="Boot.Dev">Boot.Dev</a>
+              </li>
+              <li>
+                <a href="https://it-tools.tech" target="_blank" title="IT Tools">IT Tools</a>
+              </li>
+              <li>
+                <a href="https://azure.microsoft.com/en-us/" target="_blank" title="Microsoft Azure">Microsoft Azure</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Dmitry Porotnikov Contributor card END ________  -->
+
         <!-- ________ Donald's card START ________  -->
         <div class="card">
           <p class="name">Donald Duck</p>
