--- a/index.html
+++ b/index.html
@@ -116,6 +116,30 @@
         <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
         <!-- ============== ^^^^ TEMPLATE ^^^^ ============== -->
         <!-- ================================================ -->
+        <div class="card">
+          <p class="name">Mohammad ali kazmi</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Mohammad ali kazmi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/alikazmi00" target="_blank">alikazmi00</a>
+          </p>
+          <p class="about">Coding is  my life and passion also (FULL STACK DEVELOPER)</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">code with harry</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource"> FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">geeks for geeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
