--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________  Ritik Shrestha Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ritik Shrestha</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/ritik-shrestha-5617531b1/" target="_blank">Ritik Shrestha</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/whyme-duh" target="_blank">Whyme-duh</a>
+          </p>
+          <p class="about">Hi! I am a hobby developer from Nepal. Coding is in my vein. (LOL, cringy)</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="First Resource">Stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3schools</a>
+              </li>
+              <li>
+                <a href="https://dev.to/" target="_blank" title="Third resource">Dev.to</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Ritik Shrestha Contributor card END ________  -->
+
         <!-- ________ Dmitry Porotnikov Contributor card START ________  -->
         <div class="card">
           <p class="name">Dmitry Porotnikov</p>
