--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Michał Zaremba-Śmietański</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/michalzarsm" target="_blank">michalzarsm</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/michalzarsm" target="_blank">michalzarsm</a>
+          </p>
+          <p class="about">Hello! I'm a Software Engineer from Poland.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@LowLevelLearning" target="_blank" title="First Resource">Low Level Learning</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@dreamsofcode" target="_blank" title="Second Resource">Dreams Of Code</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Third resource">Stack Overflow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________  Ritik Shrestha Contributor card START ________  -->
         <div class="card">
           <p class="name">Ritik Shrestha</p>
