--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/michalzarsm" target="_blank">michalzarsm</a>
           </p>
-          <p class="about">Hello! I'm a Software Engineer from Poland.</p>
+          <p class="about">Hello. I'm a Software Engineer from Poland.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
