--- a/index.html
+++ b/index.html
@@ -1745,16 +1745,16 @@
           </p>
           <p class="about">I like cats and code and games</p>
           <div class="resources">
-            <p>0 Useful Dev Resources</p>
+            <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://replit.com/" target="_blank" title="First Resource">Replit</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://www.coursera.org/courses?query=web%20development" target="_blank" title="Second Resource">Coursera</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://copilot.microsoft.com/" target="_blank" title="Third resource">Copilot</a>
               </li>
             </ul>
           </div>
