added a new card

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <a href="https://www.geeksforgeeks.org/" target="_blank" title="Second Resource">GeeksForGeeks</a>
               </li>
               <li>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="Third resource">NetNinja</a>
+                <a href="https://chat.openai.com/" target="_blank" title="Third resource">ChatGPT</a>
               </li>
             </ul>
           </div>
