added link to Github profile

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <p class="name">Reyna Lau</p>
           <p class="contact">
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">reynalau220</a>
+            <a href="https://www.github.com/reynalau220" target="_blank">reynalau220</a>
           </p>
           <p class="about">Hi :D</p>
           <div class="resources">
