--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name"> Tino Kaseke</p>
+          <p class="contact">
+            <i class="fa-brands fa-bluesky"></i>
+            <a href="https://bsky.app/profile/tinodevelops.bsky.social" target="_blank">@Tino_TheGiant</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/TinoTheGiant" target="_blank">TinoTheGiant</a>
+          </p>
+          <p class="about">Full stack developer| Data Analyst. Lets collab! I enjoy hyrox and crossfit.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://fonts.google.com/" target="_blank" title="First Resource">fonts.google.com</a>
+              </li>
+              <li>
+                <a href="https://learn.microsoft.com/en-us/visualstudio/python/?view=vs-2022" target="_blank" title="Second Resource">learn.microsoft.com</a>
+              </li>
+              <li>
+                <a href="https://skillicons.dev/" target="_blank" title="Third resource">skillicons.dev/</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *uepzuesContributor card START ________  -->
         <div class="card">
           <p class="name">Krimier Sanz</p>
