--- a/index.html
+++ b/index.html
@@ -111,6 +111,34 @@
             </ul>
           </div>
         </div>
+        <!-- ================================================ -->
+        <!-- ==================  TEMPLATE  ================== -->
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">p1x1p</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/p1x1p" target="_blank">p1x1p</a>
+          </p>
+          <p class="about">Just a developer and GitHub beginner 😐</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/" target="_blank" title="Mozilla MDN">Mozilla MDN</a>
+              </li>
+              <li>
+                <a href="https://learn.microsoft.com" target="_blank" title="Microsoft MSDN">MSDN/a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
