--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <a href="https://developer.mozilla.org/" target="_blank" title="Mozilla MDN">Mozilla MDN</a>
               </li>
               <li>
-                <a href="https://learn.microsoft.com" target="_blank" title="Microsoft MSDN">MSDN/a>
+                <a href="https://learn.microsoft.com" target="_blank" title="Microsoft MSDN">MSDN</a>
               </li>
             </ul>
           </div>
