--- a/index.html
+++ b/index.html
@@ -111,10 +111,7 @@
             </ul>
           </div>
         </div>
-
-        <!-- ================================================ -->
-        <!-- ==================  TEMPLATE  ================== -->
-        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
@@ -139,12 +136,7 @@
             </ul>
           </div>
         </div>
-
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
-        <!-- ================================================ -->
-        <!-- ==================  TEMPLATE  ================== -->
-        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
