--- a/index.html
+++ b/index.html
@@ -112,6 +112,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+		
+		<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Yonatan Sagi</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/ita_da_pita" target="_blank">ita_da_pita</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Itamar-Dalal" target="_blank">Itamar-Dalal</a>
+          </p>
+          <p class="about">Just Learning :)</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/" target="_blank" title="Mozilla MDN">Mozilla MDN</a>
+              </li>
+              <li>
+                <a href="https://learn.microsoft.com" target="_blank" title="Microsoft MSDN">MSDN</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
