--- a/index.html
+++ b/index.html
@@ -1870,7 +1870,36 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: jafurman* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Vern</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/VernSG" target="_blank">VernSG</a>
+          </p>
+          <p class="about">code for fun</p>
+          <div class="resources">
+            <p>like javascript</p>
+            <ul>
+              <li>
+                <a href="https://replit.com/" target="_blank" title="First Resource">Replit</a>
+              </li>
+              <li>
+                <a
+                  href="https://www.coursera.org/courses?query=web%20development"
+                  target="_blank"
+                  title="Second Resource"
+                >
+                  Coursera
+                </a>
+              </li>
+              <li>
+                <a href="https://copilot.microsoft.com/" target="_blank" title="Third resource">Copilot</a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
