--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">zquigg</p>
+          <p class="contact">
+            <i class="fa-brands fa-youtube"></i>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=trnLxEj0Unb_eCXA" target="_blank">my youtube channel</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/zquigg" target="_blank">my github</a>
+          </p>
+          <p class="about">frutieger aero enthusiast/ bring back customizable github profiles</p>
+          <div class="resources">
+            <p>things that are cool</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@SeaPearl" target="_blank" title="First Resource">i really like this persons playlists when programming esp "cyber world"</a>
+              </li>
+              <li>
+                <a href="https://pokemonshowdown.com/" target="_blank" title="Second Resource">if you pkmn showdown hit me up</a>
+              </li>
+              <li>
+                <a href="https://www.zillow.com/" target="_blank" title="Third resource">i like to look at big houses sometimes and imagine my veggie garden in the backyard</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Yonatan Sagi</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
