atranv first commit

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">atranv</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/alextrancs/" target="_blank">alextrancs</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/atranv" target="_blank">atranv</a>
+          </p>
+          <p class="about">developer/product/gtm + horse racing enthusiast</p>
+          <div class="resources">
+            <p>find ideas</p>
+            <ul>
+              <li>
+                <a href="https://boringcashcow.com/" target="_blank" title="First resource">boring ideas</a>
+              </li>
+              <li>
+                <a href="https://www.ideasgrab.com/" target="_blank" title="Second resource">random ideas</a>
+              </li>
+              <li>
+                <a href="https://up-for-grabs.net/" target="_blank" title="Third resource">more open source</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">zquigg</p>
           <p class="contact">
             <i class="fa-brands fa-youtube"></i>
