Apply suggestions from code review
Co-authored-by: Michael <140268904+StackOverflowIsBetterThanAnyAI@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/TinoTheGiant" target="_blank">TinoTheGiant</a>
           </p>
-          <p class="about">Full stack developer| Data Analyst. Lets collab! I enjoy hyrox and crossfit.</p>
+          <p class="about">Full stack developer | Data Analyst. Lets collab! I enjoy hyrox and crossfit.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://fonts.google.com/" target="_blank" title="First Resource">fonts.google.com</a>
+                <a href="https://fonts.google.com/" target="_blank" title="First Resource">Google Fonts</a>
               </li>
               <li>
-                <a href="https://learn.microsoft.com/en-us/visualstudio/python/?view=vs-2022" target="_blank" title="Second Resource">learn.microsoft.com</a>
+                <a href="https://learn.microsoft.com/en-us/visualstudio/python/?view=vs-2022" target="_blank" title="Second Resource">Microsoft Learn</a>
               </li>
               <li>
-                <a href="https://skillicons.dev/" target="_blank" title="Third resource">skillicons.dev/</a>
+                <a href="https://skillicons.dev/" target="_blank" title="Third resource">Skill Icons/</a>
               </li>
             </ul>
           </div>
