adding my cart info + badge

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Hana [ hn0a ]</p>
+          <p class="name">hana [hn0a]</p>
           <p class="contact">
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/hn0a" target="_blank">hn0a</a>
@@ -136,7 +136,7 @@
             </ul>
           </div>
           <div class="tryhackme-badge">
-            <script src="https://tryhackme.com/badge/2179761"></script>
+            <img src="https://tryhackme-badges.s3.amazonaws.com/hn0a.png" alt="TryHackMe">
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
