Made changes to hrefs in index.html

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
             <p>i do stuff like</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">learning new tech things</a>
+                <a href="" target="_blank" title="First Resource">learning new tech things</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">messing around with video edits for clients</a>
+                <a href="https://bento.me/hxrshilgupta" target="_blank" title="Second Resource">messing around with video edits for clients</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">i do click sometimes</a>
+                <a href="https://www.viewbug.com/member/hxrshilgupta" target="_blank" title="Third resource">i do click sometimes</a>
               </li>
             </ul>
           </div>
