Updated missing href

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p>i do stuff like</p>
             <ul>
               <li>
-                <a href="" target="_blank" title="First Resource">learning new tech things</a>
+                <a href="https://www.linkedin.com/in/hxrshilgupta/" target="_blank" title="First Resource">learning and networking with people and new tech</a>
               </li>
               <li>
                 <a href="https://bento.me/hxrshilgupta" target="_blank" title="Second Resource">messing around with video edits for clients</a>
