add: ramarfx card

--- a/index.html
+++ b/index.html
@@ -2209,6 +2209,33 @@
         </div>
         <!-- ________ kyahcicer Contributor card END ________  -->
 
+        <!-- ________ ramarfx Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ramarfx</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/ramtxh" target="_blank">@ramtxh</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ramarfx" target="_blank">ramarfx</a>
+          </p>
+          <p class="about">i am a student who likes everything about code and gaming</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@sandhikagalihWPU" target="_blank" title="WPU">WPU</a>
+              </li>
+              <li>
+                <a href="https://udemy.com" target="_blank" title="udemy">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="w3schools">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________  ramarfx Contributor card END ________  -->
+
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
