--- a/index.html
+++ b/index.html
@@ -2236,6 +2236,33 @@
         </div>
         <!-- ________  ramarfx Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Dhanush</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/dhanushkrish4" target="_blank">@dhanushkrish4</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/dhan-profile" target="_blank">dhan-profile</a>
+          </p>
+          <p class="about">Software Developer | Java FullStack | Spring Boot</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://docs.oracle.com/javase/specs/jls/se8/html/index.html" target="_blank" title="JLS">Java JLS</a>
+              </li>
+              <li>
+                <a href="https://dev.java/learn/" target="_blank" title="DEV Java">Learn Java</a>
+              </li>
+              <li>
+                <a href="https://spring.academy/" target="_blank" title="Spring Academy">Spring Academy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
