--- a/index.html
+++ b/index.html
@@ -2236,6 +2236,33 @@
         </div>
         <!-- ________  ramarfx Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">KISHORE K</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.x.com/kishoreology" target="_blank">kishoreology</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kishoreology" target="_blank">kishoreology</a>
+          </p>
+          <p class="about">Software Developer, Python Developer, Beginner Programmer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@takeUforward" target="_blank" title="Programming DSA">Programming DSA</a>
+              </li>
+              <li>
+                <a href="https://pythontutor.com/render.html#mode=edit" target="_blank" title="Python Explainer">Python Explainer</a>
+              </li>
+              <li>
+                <a href="https://wiki.python.org/moin/BeginnersGuide" target="_blank" title="Python Beginner">Python Beginner</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
