--- a/index.html
+++ b/index.html
@@ -2269,6 +2269,39 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">DHANUSH K</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.x.com/dhanushkrish4" target="_blank">dhanushkrish4</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/dhan-profile" target="_blank">dhan-profile</a>
+          </p>
+          <p class="about">Software Developer, Java FullStack, SpringBoot, Microservices, Hibernate-ORM, RESTapi</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@takeUforward" target="_blank" title="Programming DSA">
+                  Programming DSA
+                </a>
+              </li>
+              <li>
+                <a href="https://app.daily.dev/" target="_blank" title="Daily Dev">
+                  Daily Dev
+                </a>
+              </li>
+              <li>
+                <a href="https://resumeworded.com/" target="_blank" title="Resume Worded">
+                  Resume Worded
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
