add daniel bitengo's card

--- a/index.html
+++ b/index.html
@@ -284,6 +284,33 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Daniel Bitengo</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/DanielBitengo" target="_blank">@DanielBitengo</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Dancode-188" target="_blank">Dancode-188</a>
+          </p>
+          <p class="about">An aspiring software engineer with a passion for inovation. I like to work on embedded systems too</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">LeetCode</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Dev.to</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Medium</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">zquigg</p>
           <p class="contact">
             <i class="fa-brands fa-youtube"></i>
