--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </p>
           <p class="about">I'm a student of freshman year currently purusing bachelors in computer science and engineering.</p>
           <div class="resources">
-            <p>3 Underrated resources for comp - sci students</p>
+            <p>3 Underrated resources for comp - sci students.</p>
             <ul>
               <li>
                 <a href="https://www.youtube.com/@WilliamFiset-videos/playlists" target="_blank" title="First Resource">Data Structures by William Fiset</a>
