--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <i class="fab fa-x-twitter"></i>
             <a href="https://x.com/theinvictus07" target="_blank">Follow me on twitter :)</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/thebharat07" target="_blank">Not much to showcase but here's my github.😁</a>
+            <a href="https://github.com/thebharat07" target="_blank">Not much to showcase but here's my github 😁</a>
           </p>
           <p class="about">I'm a student of freshman year currently purusing bachelors in computer science and engineering.</p>
           <div class="resources">
